generated/checker-for-evaluation/generated/test-Out-of-Bound-ccc514b7e7acbd301219cbaec0fc0bfe5741acee/build_logs/8/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::DcfVisitor::VisitForStmt(clang::ForStmt*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:71: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(clang::ForStmt*&, const clang::SourceManager&)’
  104 |       PathDiagnosticLocation Loc = PathDiagnosticLocation::createBegin(FS, *SM);
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:57: note:   no known conversion for argument 1 from ‘clang::ForStmt*’ to ‘const clang::Decl*’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                             ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note:   candidate expects 3 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note:   candidate expects 3 arguments, 2 provided
In file included from /usr/include/c++/11/memory:76,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = clang::ento::BugReport; _Args = {clang::ento::BugType&, const char (&)[65], clang::ento::PathDiagnosticLocation&}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<clang::ento::BugReport>]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:105:48:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: invalid new-expression of abstract class type ‘clang::ento::BugReport’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:119:7: note:   because the following virtual functions are pure within ‘clang::ento::BugReport’:
  119 | class BugReport {
      |       ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:173:34: note:     ‘virtual clang::ento::PathDiagnosticLocation clang::ento::BugReport::getLocation() const’
  173 |   virtual PathDiagnosticLocation getLocation() const = 0;
      |                                  ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:178:23: note:     ‘virtual const clang::Decl* clang::ento::BugReport::getDeclWithIssue() const’
  178 |   virtual const Decl *getDeclWithIssue() const = 0;
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:189:34: note:     ‘virtual clang::ento::PathDiagnosticLocation clang::ento::BugReport::getUniqueingLocation() const’
  189 |   virtual PathDiagnosticLocation getUniqueingLocation() const = 0;
      |                                  ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:195:23: note:     ‘virtual const clang::Decl* clang::ento::BugReport::getUniqueingDecl() const’
  195 |   virtual const Decl *getUniqueingDecl() const = 0;
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:248:16: note:     ‘virtual void clang::ento::BugReport::Profile(llvm::FoldingSetNodeID&) const’
  248 |   virtual void Profile(llvm::FoldingSetNodeID& hash) const = 0;
      |                ^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
